--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -12,25 +12,17 @@
             from-primary-blue to-primary-blue dark:from-primary-blue dark:to-primary-blue
         "
       >
-        Captain Awesome
+         🍃EarthGuiders
       </span>
     </h1>
     <!-- <p class="text-2xl pb-4">Web Developer. OSS Wizard. Blogger.</p> -->
   </div>
-  <div>
+  
+    <div class="border-b-9 border-solid border-primary-blue p-7 text-center rounded-10 bg-primary-blue">
     <p class="mb-5">
-      Hello! This is a starter template to build your own blog with 
-      <a href={"https://github.com/flexdinesh/blogster"} target="_blank">Blogster</a>. 
-      Available in four themes  
-      <a href={"https://blogster-minimal.netlify.app"} target="_blank">minimal</a>, 
-      <a href={"https://blogster-sleek.netlify.app"} target="_blank">sleek</a>, 
-      <a href={"https://blogster-newspaper.netlify.app"} target="_blank">newspaper</a> and
-      <a href={"https://blogster-bubblegum.netlify.app"} target="_blank">bubblegum</a>. 
-      This blog is a demo for <strong>bubblegum</strong> theme.
-      Get started with one simple command.
-    </p>
-    <p class="text-center whitespace-nowrap overflow-auto">
-      <code class="py-1 px-2">npx create-blogster@latest --theme bubblegum</code>
+      <strong>Welcome to EarthGuiders! 🌱 We're on a mission to raise awareness about endangered species and their habitats. Through our blogs, we'll explore the beauty of Earth's wildlife and advocate for their protection. Join us in safeguarding our planet's biodiversity for future generations...</strong> 
     </p>
   </div>
+
+<img src="./images/gd.png" alt="KPIT-Pulse Image" class="mb-2 mt-2 h-auto w-full object-cover mx-auto">
 </section>
